chore: prefix plans and script for swagger
