# src/modules/subscriptions/subscriptions.controller.ts
@@ -1,34 +1,39 @@
+import "reflect-metadata"
 import { inject, injectable } from "inversify";
 import { TYPES } from "../../types";
 import { SubscriptionService } from "./subscriptions.service";
 import { SubscriptionPlan } from "./dto/subscription-response.dto";
-import { Get, Route } from "@tsoa/runtime";
+import { Get, Route ,Body, Post, Path, Put, Delete} from "@tsoa/runtime";
 
 @injectable()
-@Route("/api/subscription")
+@Route("/api/subscriptions")
 export class SubscriptionController {
   constructor(
     @inject(TYPES.SubscriptionService) private subscriptionService: SubscriptionService
   ) {}
 
   // List all subscription plans
-	@Get("/")
+	@Get("/plans")
   async list() {
     return this.subscriptionService.list();
   }
 
+
   // Create a new subscription plan
-  async create(data: SubscriptionPlan) {
+	@Post("/plans")
+  async create(@Body() data: SubscriptionPlan) {
     return this.subscriptionService.create(data);
   }
 
   // Update an existing subscription plan
-  async update(id: string, data: Partial<SubscriptionPlan>) {
+	@Put("/plans/{id}")
+  async update(@Path() id: string,@Body() data: Partial<SubscriptionPlan>) {
     return this.subscriptionService.update(id, data);
   }
 
   // Delete a subscription plan
-  async delete(id: string) {
+	@Delete("plans/{id}")
+  async delete(@Path() id: string) {
     return this.subscriptionService.delete(id);
   }
 }
